Fixed accordion header spacing.

--- a/src/components/Accordion/Accordion.module.scss
+++ b/src/components/Accordion/Accordion.module.scss
@@ -15,8 +15,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-
-  flex-grow: 1;
+  gap: 1em;
 
   font-size: 18px;
   font-weight: 500;
